--- a/src/sass/_loading.scss
+++ b/src/sass/_loading.scss
@@ -13,21 +13,21 @@
 	opacity: 1;
 }
 
-.ball {
+.loading__ball {
 	background-color: #777;
 	border-radius: 50%;
 	margin: 5px;
 	height: 10px;
 	width: 10px;
 	animation: jump .5s ease-in infinite;
-}
 
-.ball:nth-of-type(2) {
-	animation-delay: 0.1s;
-}
+	&:nth-of-type(2) {
+		animation-delay: 0.1s;
+	}
 
-.ball:nth-of-type(3) {
-	animation-delay: 0.2s;
+	&:nth-of-type(3) {
+		animation-delay: 0.2s;
+	}
 }
 
 @keyframes jump {
