--- a/src/sass/_gallery.scss
+++ b/src/sass/_gallery.scss
@@ -45,3 +45,36 @@
   font-style: normal;
   color: currentColor;
 }
+
+.button--up {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	background-color: tomato;
+	position: fixed;
+	bottom: 30px;
+	right: 30px;
+	width: 65px;
+	height: 65px;
+
+	background-color:#03453b;
+	cursor: pointer;
+	border: 1px solid #03453b ;
+  color: #d1a678;
+	border-radius: 50%;
+
+	transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+	color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+	border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+	&:hover,
+	&:focus {
+		background-color: #d1a678;
+		border-color: #d1a678;
+		color: #03453b;
+	}
+}
+
+.icon-arrow {
+	stroke: currentColor;
+}
