--- a/src/sass/_common.scss
+++ b/src/sass/_common.scss
@@ -1,5 +1,9 @@
 @import '~node_modules/modern-normalize/modern-normalize.css';
 
+body {
+  background-color: #f5f4fa;
+}
+
 html {
   scroll-behavior: smooth;
 }
