--- a/src/templates/photo-card.hbs
+++ b/src/templates/photo-card.hbs
@@ -1,19 +1,21 @@
 {{#each this}}
-  <a class='link photo-card' href='{{largeImageURL}}'>
-    <img class='image' src='{{webformatURL}}' alt='{{tags}}' loading='lazy' />
-    <div class='info'>
-      <p class='info-item'>
-        <b>Likes: <span>{{likes}}</span></b>
-      </p>
-      <p class='info-item'>
-        <b>Views: <span>{{views}}</span></b>
-      </p>
-      <p class='info-item'>
-        <b>Comments: <span>{{comments}}</span></b>
-      </p>
-      <p class='info-item'>
-        <b>Downloads: <span>{{downloads}}</span> </b>
-      </p>
-    </div>
-  </a>
+  <li class='photo-card'>
+    <a class='link' href='{{largeImageURL}}'>
+      <img class='image' src='{{webformatURL}}' alt='{{tags}}' loading='lazy' />
+      <div class='info'>
+        <p class='info-item'>
+          <b>Likes: <span>{{likes}}</span></b>
+        </p>
+        <p class='info-item'>
+          <b>Views: <span>{{views}}</span></b>
+        </p>
+        <p class='info-item'>
+          <b>Comments: <span>{{comments}}</span></b>
+        </p>
+        <p class='info-item'>
+          <b>Downloads: <span>{{downloads}}</span> </b>
+        </p>
+      </div>
+    </a>
+  </li>
 {{/each}}
